snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2-all.jar.sha1
f4b0f647358971f466206820367c20cf2c1c10dc